// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when dont match renders correctly 1`] = `
<div
  className="navbar-links"
>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/about"
  >
    Link - 
    <h6
      className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Sobre
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/materials"
  >
    Link - 
    <h6
      className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Explore
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to="/forum"
  >
    Link - 
    <h6
      className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Fórum
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_self"
    to={
      Object {
        "pathname": "/auth/sign-up",
        "state": Object {
          "referrer": "/suppliers/new",
        },
      }
    }
  >
    Link - 
    <h6
      className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Cadastrar fornecedor
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    to={
      Object {
        "pathname": "/auth/sign-in",
        "state": Object {
          "referrer": "foo-path",
        },
      }
    }
  >
    Link - 
    <h6
      className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Entrar
    </h6>
  </div>
</div>
`;

exports[`when matches renders correctly 1`] = `
Array [
  <button
    className="MuiButtonBase-root-7 MuiIconButton-root-1"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
>
    <span
        className="MuiIconButton-label-6"
    >
        <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-10"
            color={undefined}
            focusable="false"
            role="presentation"
            style={Object {}}
            viewBox="0 0 24 24"
        >
            <path
                d="M0 0h24v24H0z"
                fill="none"
            />
            <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
        </svg>
    </span>
    <span
        className="MuiTouchRipple-root-67"
    />
</button>,
  <div
    anchorEl={null}
    className="menu-appbar"
    id="menu-appbar"
    onClose={[Function]}
    open={false}
>
    Menu - 
    <li
        className="MuiButtonBase-root-7 MuiListItem-root-21 MuiListItem-default-24 MuiListItem-gutters-28 MuiListItem-button-29 MuiMenuItem-root-19"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
    >
        <div
            className="navbar-link"
            style={
                Object {
                    "color": "black",
                    "textDecoration": "none",
                  }
            }
            target="_self"
            to="/about"
        >
            Link - 
            <h6
                className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
                style={
                    Object {
                        "alignSelf": "center",
                        "display": "inline-block",
                      }
                }
            >
                Sobre
            </h6>
        </div>
        <span
            className="MuiTouchRipple-root-67"
        />
    </li>
    <li
        className="MuiButtonBase-root-7 MuiListItem-root-21 MuiListItem-default-24 MuiListItem-gutters-28 MuiListItem-button-29 MuiMenuItem-root-19"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
    >
        <div
            className="navbar-link"
            style={
                Object {
                    "color": "black",
                    "textDecoration": "none",
                  }
            }
            target="_self"
            to="/materials"
        >
            Link - 
            <h6
                className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
                style={
                    Object {
                        "alignSelf": "center",
                        "display": "inline-block",
                      }
                }
            >
                Explore
            </h6>
        </div>
        <span
            className="MuiTouchRipple-root-67"
        />
    </li>
    <li
        className="MuiButtonBase-root-7 MuiListItem-root-21 MuiListItem-default-24 MuiListItem-gutters-28 MuiListItem-button-29 MuiMenuItem-root-19"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
    >
        <div
            className="navbar-link"
            style={
                Object {
                    "color": "black",
                    "textDecoration": "none",
                  }
            }
            target="_blank"
            to="http://materiabrasil.com.br/"
        >
            Link - 
            <h6
                className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
                style={
                    Object {
                        "alignSelf": "center",
                        "display": "inline-block",
                      }
                }
            >
                Escritórios
            </h6>
        </div>
        <span
            className="MuiTouchRipple-root-67"
        />
    </li>
    <li
        className="MuiButtonBase-root-7 MuiListItem-root-21 MuiListItem-default-24 MuiListItem-gutters-28 MuiListItem-button-29 MuiMenuItem-root-19"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
    >
        <div
            className="navbar-link"
            style={
                Object {
                    "color": "black",
                    "textDecoration": "none",
                  }
            }
            target="_self"
            to="/forum"
        >
            Link - 
            <h6
                className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
                style={
                    Object {
                        "alignSelf": "center",
                        "display": "inline-block",
                      }
                }
            >
                Fórum
            </h6>
        </div>
        <span
            className="MuiTouchRipple-root-67"
        />
    </li>
    <li
        className="MuiButtonBase-root-7 MuiListItem-root-21 MuiListItem-default-24 MuiListItem-gutters-28 MuiListItem-button-29 MuiMenuItem-root-19"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
    >
        <div
            className="navbar-link"
            style={
                Object {
                    "color": "black",
                    "textDecoration": "none",
                  }
            }
            target="_self"
            to={
                Object {
                    "pathname": "/auth/sign-up",
                    "state": Object {
                      "referrer": "/suppliers/new",
                    },
                  }
            }
        >
            Link - 
            <h6
                className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
                style={
                    Object {
                        "alignSelf": "center",
                        "display": "inline-block",
                      }
                }
            >
                Cadastrar fornecedor
            </h6>
        </div>
        <span
            className="MuiTouchRipple-root-67"
        />
    </li>
    <li
        className="MuiButtonBase-root-7 MuiListItem-root-21 MuiListItem-default-24 MuiListItem-gutters-28 MuiListItem-button-29 MuiMenuItem-root-19"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
    >
        <div
            className="navbar-link"
            style={
                Object {
                    "color": "black",
                    "textDecoration": "none",
                  }
            }
            to={
                Object {
                    "pathname": "/auth/sign-in",
                    "state": Object {
                      "referrer": "foo-path",
                    },
                  }
            }
        >
            Link - 
            <h6
                className="MuiTypography-root-32 MuiTypography-subtitle1-50 MuiTypography-colorInherit-61"
                style={
                    Object {
                        "alignSelf": "center",
                        "display": "inline-block",
                      }
                }
            >
                Entrar
            </h6>
        </div>
        <span
            className="MuiTouchRipple-root-67"
        />
    </li>
</div>,
]
`;
